Fixed display on mobile

--- a/docs/site/_sass/components/_footer.scss
+++ b/docs/site/_sass/components/_footer.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .content {
-  min-width: 320px;
+  min-width: 250px;
   flex: 1 0 auto;
 }
 
