--- a/docs/site/assets/css/docs.scss
+++ b/docs/site/assets/css/docs.scss
@@ -629,7 +629,7 @@
 }
 
 .layout-sidebar__content {
-  min-width: 320px;
+  min-width: 250px;
   flex: 1;
 
   &--tile {
